--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -172,14 +172,16 @@
                             android:text="Edit Profile"/>
 
                         <Button
+                            android:onClick="logout"
+                            android:id="@+id/profile_logoutBtn"
                             android:layout_width="125dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
-                            android:textColor="#000000"
+                            android:layout_weight="1"
                             android:background="@drawable/element_outline"
-                            android:text="Log Out"/>
+                            android:text="Log Out"
+                            android:textColor="#000000" />
 
                     </LinearLayout>
 
