--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -67,7 +67,7 @@
         android:background="@drawable/button_style"
         android:id="@+id/button"
         android:layout_width="130dp"
-        android:textColor="#ffffff"
+        android:textColor="#000000"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginLeft="8dp"
