--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#0685b3</color>
     <color name="colorAccent">#1b86d8</color>
     <color name="colorWhite">#FFFFFF</color>
+    <color name="colorGrey">#696969</color>
 </resources>
