--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -60,7 +60,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center_horizontal"
                                 android:layout_marginTop="60dp"
-                                android:text="Harold"
+                                android:text="@string/profile_name"
                                 android:textSize="25sp"
                                 android:textStyle="bold" />
 
@@ -162,17 +162,18 @@
                         android:weightSum="2">
 
                         <Button
+                            android:id="@+id/profile_btnEditProfile"
                             android:layout_width="125dp"
                             android:layout_height="wrap_content"
-                            android:layout_weight="1"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
-                            android:textColor="#000000"
+                            android:layout_weight="1"
                             android:background="@drawable/element_outline"
-                            android:text="Edit Profile"/>
+                            android:text="Edit Profile"
+                            android:textColor="#000000" />
 
                         <Button
-                            android:id="@+id/btnJobList"
+                            android:id="@+id/profile_btnJobList"
                             android:layout_width="125dp"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
