tried my best search java + layout

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -365,30 +365,18 @@
                         android:weightSum="2">
 
                         <Button
-                            android:onClick="edit"
                             android:id="@+id/btnEditProfile"
-                            android:layout_width="125dp"
+                            android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="10dp"
                             android:layout_marginRight="10dp"
                             android:layout_weight="1"
-                            android:textColor="#ffffff"
-                            android:textStyle="bold"
                             android:background="@drawable/button_element"
-                            android:text="Edit Profile"/>
-
-
-                        <Button
-                            android:id="@+id/profile_btnJobList"
-                            android:layout_width="125dp"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:layout_marginLeft="5dp"
-                            android:layout_marginRight="5dp"
+                            android:onClick="edit"
+                            android:text="Edit Profile"
                             android:textColor="#ffffff"
-                            android:textStyle="bold"
-                            android:background="@drawable/button_element"
-                            android:text="Job Applied List"/>
+                            android:textStyle="bold" />
+
 
                     </LinearLayout>
 
@@ -398,10 +386,9 @@
                         android:layout_marginTop="15dp"
                         android:layout_marginBottom="30dp"
                         android:orientation="horizontal"
-                        android:weightSum="2">
+                        android:weightSum="1">
 
                         <Button
-                            android:onClick="logout"
                             android:id="@+id/profile_logoutBtn"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
@@ -409,9 +396,10 @@
                             android:layout_marginRight="105dp"
                             android:layout_weight="1"
                             android:background="@drawable/button_element"
+                            android:onClick="logout"
                             android:text="Log Out"
                             android:textColor="#ffffff"
-                            android:textStyle="bold"/>
+                            android:textStyle="bold" />
 
                     </LinearLayout>
 
