--- a/app/src/main/res/layout/activity_editprofile.xml
+++ b/app/src/main/res/layout/activity_editprofile.xml
@@ -36,6 +36,7 @@
                     android:elevation="1dp"/>
 
                 <LinearLayout
+
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical">
@@ -57,6 +58,7 @@
                             android:background="@drawable/element_outline">
 
                             <Button
+                                android:onClick="uploadPhoto"
                                 android:id="@+id/btnUploadPhoto"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
